--- a/pages/category/index.less
+++ b/pages/category/index.less
@@ -22,7 +22,7 @@ page{
         .text{
             justify-content: center;
             display: flex;
-            color: var(--themeColor);
+            color: dodgerblue;
             font-weight: 900;
             font-size: 35rpx;
         }
