--- a/pages/category/index.wxss
+++ b/pages/category/index.wxss
@@ -24,7 +24,7 @@ page {
 .cates .container .text {
   justify-content: center;
   display: flex;
-  color: var(--themeColor);
+  color: dodgerblue;
   font-weight: 900;
   font-size: 35rpx;
 }
