--- a/pages/categoryBook/index.less
+++ b/pages/categoryBook/index.less
@@ -34,7 +34,7 @@ page{
                             color: black;
                         }
                         .goods_price{
-                            color: var(--themeColor);
+                            color: #eb4450;
                             font-size: 32rpx;
                             font-weight: 900;
                         }
