--- a/pages/user/index.less
+++ b/pages/user/index.less
@@ -4,7 +4,6 @@ page{
 .user_info_wrap{
     height: 45vh;
     overflow: hidden;
-    background-color: var(--themeColor);
     position: relative;
     .user_img_wrap{
         position: relative;
@@ -65,7 +64,7 @@ page{
                 text-align: center;
                 padding: 10rpx 0;
                 .his_num{
-                    color: var(--themeColor);
+                    color: #eb4450;
                 }
                 .his_name{}
             }
@@ -84,7 +83,7 @@ page{
                     flex: 1;
                     text-align: center;
                     .iconfont{
-                        color: var(--themeColor);
+                        color: #eb4450;
                         font-size: 40rpx;
                     }
                     .order_name{}
