--- a/pages/vip/index.less
+++ b/pages/vip/index.less
@@ -7,7 +7,6 @@ page{
   height: 25vh;
   overflow: hidden;
   position: relative;
-  background-color: var(--themeColor);
   .user_img_wrap{
     position: relative;
     .user_bg{
@@ -79,7 +78,7 @@ page{
         }
         .vip_price{
           font-size: 35rpx;
-          color: var(--themeColor);
+          color: #eb4450;
           padding: 10rpx 0;
         }
       }
@@ -103,7 +102,7 @@ page{
   
     .order_pay_wrap {
         flex: 3;
-        background-color: var(--themeColor);
+        background-color: #eb4450;
         color: #fff;
         font-size: 32rpx;
         font-weight: 600;
