--- a/pages/vip/index.wxss
+++ b/pages/vip/index.wxss
@@ -6,7 +6,6 @@ page {
   height: 25vh;
   overflow: hidden;
   position: relative;
-  background-color: var(--themeColor);
 }
 .user_info_wrap .user_img_wrap {
   position: relative;
@@ -81,7 +80,7 @@ page {
 }
 .vip_wrap .vip_main .vip_kind .vip_type .vip_price {
   font-size: 35rpx;
-  color: var(--themeColor);
+  color: #eb4450;
   padding: 10rpx 0;
 }
 .vip_wrap .vip_main .vip_kind .vip_type1 {
@@ -99,7 +98,7 @@ page {
 }
 .order_pay_wrap {
   flex: 3;
-  background-color: var(--themeColor);
+  background-color: #eb4450;
   color: #fff;
   font-size: 32rpx;
   font-weight: 600;
