--- a/pages/categoryBook/index.wxss
+++ b/pages/categoryBook/index.wxss
@@ -33,7 +33,7 @@ page {
   color: black;
 }
 .cates .goods_group .goods_list navigator .goods_info_wrap .goods_price {
-  color: var(--themeColor);
+  color: #eb4450;
   font-size: 32rpx;
   font-weight: 900;
 }
