--- a/pages/freight/freight.less
+++ b/pages/freight/freight.less
@@ -24,7 +24,7 @@ page{
         }
         .freight_price{
           font-size: 35rpx;
-          color: var(--themeColor);
+          color: #eb4450;
           padding: 10rpx 0;
         }
       }
@@ -62,7 +62,7 @@ page{
   
     .order_pay_wrap {
         flex: 3;
-        background-color: var(--themeColor);
+        background-color: #eb4450;
         color: #fff;
         font-size: 32rpx;
         font-weight: 600;
