--- a/pages/index/index.less
+++ b/pages/index/index.less
@@ -1,5 +1,5 @@
 page{
-    background-color: #dedede;
+    background-color: #fff;
 }
 .index_zhiding{
     padding: 10rpx 10rpx;
@@ -34,7 +34,7 @@ page{
         flex: 1;
         .text{
             justify-content: center;
-            color: purple;
+            color: dodgerblue;
             display: flex;
             font-size: 35rpx;
             font-weight: 900;
@@ -47,8 +47,10 @@ page{
 
 .index_floor{
     .floor_group{
+        background-color: #dedede;
         .floor_title{
-            padding: 10rpx 10rpx;
+            padding: 0 10rpx;
+            border-top: 10rpx solid #dedede;
            image{
             width: 100%;
             height: 240rpx;
@@ -56,18 +58,25 @@ page{
            } 
         }
         .floor_list{
-            padding: 10rpx 10rpx;
+            padding: 0rpx 10rpx;
             navigator{
                 float: left;
                 width: 50%;
-                border-top: 5rpx solid #dedede;
+                border-top: 10rpx solid #dedede;
                 &:nth-child(2),
                 &:nth-child(4),
                 &:nth-child(6){
+                    border-left: 20rpx solid #dedede;
+                    border-right: 10rpx solid #dedede;
+                }
+                &:nth-child(1),
+                &:nth-child(3),
+                &:nth-child(5){
                     border-left: 10rpx solid #dedede;
                 }
                 image{
                     width: 100%;
+                    height: 450rpx;
                     border-radius: 20rpx;
                 }
             }
