--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,5 +1,5 @@
 page {
-  background-color: #dedede;
+  background-color: #fff;
 }
 .index_zhiding {
   padding: 10rpx 10rpx;
@@ -30,7 +30,7 @@ page {
 }
 .index_cate navigator .text {
   justify-content: center;
-  color: purple;
+  color: dodgerblue;
   display: flex;
   font-size: 35rpx;
   font-weight: 900;
@@ -38,8 +38,12 @@ page {
 .index_cate navigator image {
   width: 100%;
 }
+.index_floor .floor_group {
+  background-color: #dedede;
+}
 .index_floor .floor_group .floor_title {
-  padding: 10rpx 10rpx;
+  padding: 0 10rpx;
+  border-top: 10rpx solid #dedede;
 }
 .index_floor .floor_group .floor_title image {
   width: 100%;
@@ -47,19 +51,26 @@ page {
   border-radius: 15rpx;
 }
 .index_floor .floor_group .floor_list {
-  padding: 10rpx 10rpx;
+  padding: 0rpx 10rpx;
 }
 .index_floor .floor_group .floor_list navigator {
   float: left;
   width: 50%;
-  border-top: 5rpx solid #dedede;
+  border-top: 10rpx solid #dedede;
 }
 .index_floor .floor_group .floor_list navigator:nth-child(2),
 .index_floor .floor_group .floor_list navigator:nth-child(4),
 .index_floor .floor_group .floor_list navigator:nth-child(6) {
+  border-left: 20rpx solid #dedede;
+  border-right: 10rpx solid #dedede;
+}
+.index_floor .floor_group .floor_list navigator:nth-child(1),
+.index_floor .floor_group .floor_list navigator:nth-child(3),
+.index_floor .floor_group .floor_list navigator:nth-child(5) {
   border-left: 10rpx solid #dedede;
 }
 .index_floor .floor_group .floor_list navigator image {
   width: 100%;
+  height: 450rpx;
   border-radius: 20rpx;
 }
