--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -4,7 +4,6 @@ page {
 .user_info_wrap {
   height: 45vh;
   overflow: hidden;
-  background-color: var(--themeColor);
   position: relative;
 }
 .user_info_wrap .user_img_wrap {
@@ -64,7 +63,7 @@ page {
   padding: 10rpx 0;
 }
 .user_content .user_main .history_wrap navigator .his_num {
-  color: var(--themeColor);
+  color: #eb4450;
 }
 .user_content .user_main .orders_wrap {
   background-color: #fff;
@@ -83,7 +82,7 @@ page {
   text-align: center;
 }
 .user_content .user_main .orders_wrap .orders_content navigator .iconfont {
-  color: var(--themeColor);
+  color: #eb4450;
   font-size: 40rpx;
 }
 .user_content .user_main .app_vip_wrap {
