--- a/pages/order/index.less
+++ b/pages/order/index.less
@@ -25,7 +25,7 @@
         }
   
         .order_price_value {
-            color: var(--themeColor);
+            color: #eb4450;
             font-size: 32rpx;
         }
       }
