--- a/pages/pay/index.less
+++ b/pages/pay/index.less
@@ -20,7 +20,7 @@ page{
     .cart_title {
         padding: 20rpx;
         font-size: 36rpx;
-        color: var(--themeColor);
+        color: #eb4450;
         border-top: 1rpx solid currentColor;
         border-bottom: 1rpx solid currentColor;
     }
@@ -58,7 +58,7 @@ page{
               display: flex;
               justify-content: space-between;
             .goods_price {
-                color: var(--themeColor);
+                color: #eb4450;
                 font-size: 34rpx;
             }
   
@@ -108,7 +108,7 @@ page{
         text-align: right;
       .total_price {
         .total_price_text {
-            color: var(--themeColor);
+            color: #eb4450;
             font-size: 34rpx;
             font-weight: 600;
         }
@@ -119,7 +119,7 @@ page{
   
     .order_pay_wrap {
         flex: 3;
-        background-color: var(--themeColor);
+        background-color: #eb4450;
         color: #fff;
         font-size: 32rpx;
         font-weight: 600;
