--- a/components/Tabs/Tabs.wxss
+++ b/components/Tabs/Tabs.wxss
@@ -11,7 +11,7 @@
     padding: 15rpx 0;
 }
 .active{
-    color: var(--themeColor);
+    color: dodgerblue;
     border-bottom: 5rpx solid currentColor;
 }
 .tabs_content{}
