--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -17,19 +17,11 @@
             <view class="history_wrap">
                 <navigator> 
                     <view class="his_num">0</view>
-                    <view class="his_name">收藏的书店</view>
+                    <view class="his_name">我的智慧豆</view>
                 </navigator>
                  <navigator url="/pages/collect/index"> 
                     <view class="his_num">{{collectNums}}</view>
-                    <view class="his_name">收藏的书</view>
-                </navigator>
-                 <navigator> 
-                    <view class="his_num">0</view>
-                    <view class="his_name">关注的书</view>
-                </navigator>
-                 <navigator> 
-                    <view class="his_num">0</view>
-                    <view class="his_name">我的足迹</view>
+                    <view class="his_name">我的运费券</view>
                 </navigator>
             </view>
             <!-- 我的订单 -->
