--- a/pages/goods_detail/index.wxml
+++ b/pages/goods_detail/index.wxml
@@ -51,7 +51,7 @@
     <view class="tool_item btn_cart" bindtap="handleCartAdd">
     加入购物车
     </view>
-    <view class="tool_item btn_buy">
+    <view class="tool_item btn_buy" bindtap="handleBuyNow">
     立即购买
     </view>
 </view>
