--- a/pages/pay/index.less
+++ b/pages/pay/index.less
@@ -2,10 +2,15 @@ page{
     padding-bottom: 90rpx;
 }
 .revice_address_row{
-
+  .address_btn{
+    padding: 20rpx;
+    button{
+        width: 60%;
+    }
+  }
     .user_info_row{
         display: flex;
-        padding: 20rpx;
+        padding: 40rpx;
         .user_info{
             flex: 5;
         }
@@ -16,15 +21,7 @@ page{
     }
 }
 
-.cart_content {
-    .cart_title {
-        padding: 20rpx;
-        font-size: 36rpx;
-        color: #eb4450;
-        border-top: 1rpx solid currentColor;
-        border-bottom: 1rpx solid currentColor;
-    }
-  
+.cart_content {  
     .cart_main {
       .cart_item {
         display: flex;
@@ -76,6 +73,20 @@ page{
         }
       }
     }
+    .freight_remain{
+      padding: 10rpx;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 30rpx;
+      background-color: #fff;
+      border-radius: 20rpx;
+      .freight_remain1{
+      }
+      .freight_remain2{
+       
+      }
+    }
     .freight_remaining{
       display: flex;
       justify-content: space-between;
@@ -84,10 +95,6 @@ page{
       background-color: #fff;
       border-radius: 20rpx;
       .freight_remaining{
-          
-      }
-      .freight_remaining{
-          
       }
   }
   }
