--- a/pages/pay/index.wxss
+++ b/pages/pay/index.wxss
@@ -1,9 +1,15 @@
 page {
   padding-bottom: 90rpx;
 }
+.revice_address_row .address_btn {
+  padding: 20rpx;
+}
+.revice_address_row .address_btn button {
+  width: 60%;
+}
 .revice_address_row .user_info_row {
   display: flex;
-  padding: 20rpx;
+  padding: 40rpx;
 }
 .revice_address_row .user_info_row .user_info {
   flex: 5;
@@ -11,13 +17,6 @@ page {
 .revice_address_row .user_info_row .user_phone {
   flex: 3;
   text-align: right;
-}
-.cart_content .cart_title {
-  padding: 20rpx;
-  font-size: 36rpx;
-  color: #eb4450;
-  border-top: 1rpx solid currentColor;
-  border-bottom: 1rpx solid currentColor;
 }
 .cart_content .cart_main .cart_item {
   display: flex;
@@ -63,6 +62,15 @@ page {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.cart_content .freight_remain {
+  padding: 10rpx;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30rpx;
+  background-color: #fff;
+  border-radius: 20rpx;
 }
 .cart_content .freight_remaining {
   display: flex;
