--- a/pages/pay/index.wxml
+++ b/pages/pay/index.wxml
@@ -1,18 +1,22 @@
-<!-- 收货地址 -->	
-<view class="revice_address_row">	
-    <view  class="user_info_row">	
-        <view class="user_info">	
-           <view >{{address.userName}}</view>	
-           <view >{{address.all}}</view>	
-        </view>	
-        <view class="user_phone">{{address.telNumber}}</view>	
-    </view>	
-</view>	
+<!-- 收货地址 -->
+<view class="revice_address_row">
+    <!-- 当收货地址 不存在 按钮显示 对象 空对象 bool类型是true-->
+    <view class="address_btn" wx:if="{{!address.userName}}">
+        <button bindtap="handleChooseAddress" type="primary" plain="{{true}}">获取收货地址</button>
+    </view>
+    <!-- 当收货地址 存在 详细信息显示 -->
+    <view wx:else class="user_info_row">
+        <view class="user_info">
+           <view >{{address.userName}}</view>
+           <view >{{address.all}}</view>
+        </view>
+        <view class="user_phone">{{address.telNumber}}</view>
+    </view>
+</view>
 
 
 <!-- 购物车内容 -->	
-<view class="cart_content">	
-    <view class="cart_title">购物车</view>	
+<view class="cart_content">		
     <view class="cart_main">	
         <!-- 当cart数组 长度不为0 显示 商品信息 -->	
             <view class="cart_item"	
@@ -36,6 +40,10 @@
             </view>
     </view>	
     <!-- 运费券剩余 -->
+    <view class="freight_remain">
+        <view class="freight_remain1">运费券</view>
+        <view class="freight_remain2">x1</view>
+        </view>
     <view  class="freight_remaining">
         <view class="freight_remaining">我的运费券剩余：</view>
         <view class="freight_remaining">{{trafficTicketCount}} 张</view>
@@ -49,7 +57,6 @@
         <view class="total_price">
             合计：<text class="total_price_text">￥{{totalPrice}}</text>
         </view>
-        <view >包含运费</view>
     </view>
     <!-- 支付 -->
     <view class="order_pay_wrap" bindtap="handleOrderPay">
