--- a/pages/order/index.wxml
+++ b/pages/order/index.wxml
@@ -1,29 +1,22 @@
-<Tabs tabs="{{tabs}}" bindtabsItemChange="handleTabsItemChange" >
+<Tabs tabs="{{tabs}}" bindtabsItemChange="handleTabsItemChange">
     <view class="order_main">
-         <block wx:if="{{orders.length!==0}}">
-        <view
-        wx:for="{{orders}}"
-        wx:key="order_id"
-        class="order_item">
-        <view
-        wx:for="{{details}}"
-        wx:key="bookId"
-        class="order_item">
-        
-        <view class="order_no_row">
-            <view class="order_no_text">书本名称</view>
-            <view class="order_on_value">{{item.details.bookName}}</view>
-        </view>
-        <view class="order_price_row">
-            <view class="order_price_text">收货地址</view>
-            <view class="order_price_value">￥{{item.bookName}}</view>
-        </view>
-        <view class="order_time_row">
-            <view class="order_time_text">订单日期</view>
-            <view class="order_time_value">{{item.created_at}}</view>
-        </view>
-        </view>
-        </view>
+        <block wx:if="{{orders.length!==0}}">
+            <view wx:for="{{orders}}" wx:key="order_id" class="order_item">
+                <view wx:for="{{item.details}}" wx:key="bookId" class="order_item">
+                    <view class="order_no_row">
+                        <view class="order_no_text">书本名称</view>
+                        <view class="order_on_value">{{item.bookName}}</view>
+                    </view>
+                </view>
+                <view class="order_price_row">
+                    <view class="order_price_text">收货地址</view>
+                    <view class="order_price_value">￥{{item.addressInfo.address}}</view>
+                </view>
+                <view class="order_time_row">
+                    <view class="order_time_text">订单日期</view>
+                    <view class="order_time_value">{{item.created_at}}</view>
+                </view>
+            </view>
         </block>
         <block wx:elif="{{ status===1 }}">
             <image mode="widthFix" src="https://zmcm.oss-cn-zhangjiakou.aliyuncs.com/nothing/nopaymentinfo.jpg"></image>
