--- a/pages/vip/index.less
+++ b/pages/vip/index.less
@@ -10,28 +10,26 @@ page{
   .user_img_wrap{
     position: relative;
     .user_bg{
-      height: 30vh;
-      filter: blur(10rpx);
-      border-radius: 10%;
       padding: 10rpx;
     }
     .user_info{
       position: absolute;
-      left: 20%;
+      left: 17.5%;
       transform: translateX(-20%);
-      top: 10%;
+      top: 20%;
       display: flex;
       .user_icon{
         flex: 1.4;
         width: 150rpx;
-        height: 150rpx;
+        height: 130rpx;
         border-radius: 50%;
       }
       .user_information{
         flex: 3;
+        margin-left: 30rpx;
         .user_name{
           font-size: 40rpx;
-          color: var(--themeColor);
+          color:#fff;
         }
         .user_vip_type{
           font-size: 30rpx;
@@ -86,6 +84,31 @@ page{
         border-left: 10px solid #edece8;
       }
     }
+  }
+}
+
+.vip_privilege{
+  position: relative;
+  .vip_privilege_main{
+    position: absolute;
+    width: 90%;
+    left: 33.33%;
+    transform: translateX(-33.33%);
+    top: 260rpx;
+    .vip_privilege_name{
+      padding: 10rpx;
+      font-size: 30rpx;
+    }
+    .vip_privilege_kind{
+      display: flex;
+      .vip_privilege_type{
+        padding: 10rpx;
+        width: 50%;
+        height: 50%;
+      }
+      
+    }
+
   }
 }
 
