--- a/pages/user/index.less
+++ b/pages/user/index.less
@@ -51,7 +51,7 @@ page{
         padding-bottom: 100rpx;
         color: #666;
         position: absolute;
-        width: 90%;
+        width: 95%;
         left: 50%;
         transform: translateX(-50%);
         top: -40rpx;
@@ -59,6 +59,8 @@ page{
         .history_wrap{
             background-color: #fff;
             display: flex;
+            margin-left: 30rpx;
+            margin-right: 30rpx;
             navigator{
                 flex: 1;
                 text-align: center;
@@ -71,11 +73,7 @@ page{
         }
         .orders_wrap{
             background-color: #fff;
-            margin-top: 30rpx;
-            .orders_title{
-                padding: 20rpx;
-                border-bottom: 1rpx solid #ccc;
-            }
+            margin-top: 10rpx;
             .orders_content{
                 display: flex;
                 navigator{
