--- a/pages/vip/index.less
+++ b/pages/vip/index.less
@@ -1,6 +1,6 @@
 page{
     padding-bottom: 90rpx;
-    background-color: #edece8;
+    background-color: #fff;
 }
 
 .user_info_wrap{
@@ -11,12 +11,13 @@ page{
     position: relative;
     .user_bg{
       padding: 10rpx;
+      margin-top: 65rpx;
     }
     .user_info{
       position: absolute;
       left: 17.5%;
       transform: translateX(-20%);
-      top: 20%;
+      top: 35%;
       display: flex;
       .user_icon{
         flex: 1.4;
@@ -69,7 +70,9 @@ page{
       .vip_type{
         flex: 1;
         text-align: center;
-        padding: 20rpx 0rpx;
+        padding: 20rpx 0;
+        border: 1rpx solid #ccc;
+        border-radius:10px;
         .vip_name{
           font-size: 30rpx;
           padding: 10rpx 0;
@@ -80,8 +83,8 @@ page{
           padding: 10rpx 0;
         }
       }
-      .vip_type1{
-        border-left: 10px solid #edece8;
+      .vip_type1{;
+        margin-left: 10rpx;
       }
     }
   }
