--- a/pages/vip/index.wxss
+++ b/pages/vip/index.wxss
@@ -1,6 +1,6 @@
 page {
   padding-bottom: 90rpx;
-  background-color: #edece8;
+  background-color: #fff;
 }
 .user_info_wrap {
   height: 25vh;
@@ -12,12 +12,13 @@ page {
 }
 .user_info_wrap .user_img_wrap .user_bg {
   padding: 10rpx;
+  margin-top: 65rpx;
 }
 .user_info_wrap .user_img_wrap .user_info {
   position: absolute;
   left: 17.5%;
   transform: translateX(-20%);
-  top: 20%;
+  top: 35%;
   display: flex;
 }
 .user_info_wrap .user_img_wrap .user_info .user_icon {
@@ -70,7 +71,9 @@ page {
 .vip_wrap .vip_main .vip_kind .vip_type {
   flex: 1;
   text-align: center;
-  padding: 20rpx 0rpx;
+  padding: 20rpx 0;
+  border: 1rpx solid #ccc;
+  border-radius: 10px;
 }
 .vip_wrap .vip_main .vip_kind .vip_type .vip_name {
   font-size: 30rpx;
@@ -82,7 +85,7 @@ page {
   padding: 10rpx 0;
 }
 .vip_wrap .vip_main .vip_kind .vip_type1 {
-  border-left: 10px solid #edece8;
+  margin-left: 10rpx;
 }
 .vip_privilege {
   position: relative;
