--- a/pages/Address_information/index.wxml
+++ b/pages/Address_information/index.wxml
@@ -2,19 +2,19 @@
             <view class="address_wrap">
                 
                 <view class="name_title">
-                    收货人：<input placeholder="姓名"></input>
+                    收货人：<input placeholder="姓名" data-text="receiver" bindinput="recordInput" value="{{addressInfo.receiver}}"></input>
                 </view>
                 <view class="phone_title">
-                    手机：<input placeholder="请输入手机号码"></input>
+                    手机：<input placeholder="请输入手机号码" data-text="phone" bindinput="recordInput" value="{{addressInfo.phone}}"></input>
                 </view>
                 <view class="region_title">
-                    地区：<input placeholder="选择地区"></input>
+                    地区：<input placeholder="选择地区" data-text="area" bindinput="recordInput" value="{{addressInfo.area}}"></input>
                 </view>
                 <view class="address_title">
-                    地址：<input placeholder="请输入详细地址"></input>
+                    地址：<input placeholder="请输入详细地址" data-text="detail" bindinput="recordInput" value="{{addressInfo.detail}}"></input>
                 </view>
                 <view class="code_title">
-                    邮编：<input placeholder="邮编号码"></input>
+                    邮编：<input placeholder="邮编号码" data-text="postCode" bindinput="recordInput" value="{{addressInfo.postCode}}"></input>
                 </view>
                 
             </view>
@@ -22,7 +22,7 @@
 <!-- 底部工具栏 -->
 <view class="footer_tool">
     <!-- 地址 -->
-    <navigator class="order_pay_wrap"> 
-    保存
-    </navigator>
+    <!-- <navigator class="order_pay_wrap"> 
+    </navigator> -->
+      <button class="order_pay_wrap" bindtap="submitAddressInfo" disabled="{{disabled}}">保存</button>
 </view>
