--- a/pages/address/address.less
+++ b/pages/address/address.less
@@ -1,3 +1,17 @@
+.revice_address_row{
+      .user_info_row{
+          display: flex;
+          padding: 40rpx;
+          .user_info{
+              flex: 5;
+          }
+          .user_phone{
+              flex: 3;
+              text-align: right;
+          }
+      }
+  }
+
 .footer_tool {
     position: fixed;
     bottom: 0;
