--- a/pages/address/address.wxss
+++ b/pages/address/address.wxss
@@ -1,3 +1,14 @@
+.revice_address_row .user_info_row {
+  display: flex;
+  padding: 40rpx;
+}
+.revice_address_row .user_info_row .user_info {
+  flex: 5;
+}
+.revice_address_row .user_info_row .user_phone {
+  flex: 3;
+  text-align: right;
+}
 .footer_tool {
   position: fixed;
   bottom: 0;
