--- a/pages/address/address.wxml
+++ b/pages/address/address.wxml
@@ -1,3 +1,35 @@
+<!-- 用户收货地址 -->
+<view class="revice_address_row">
+    <!-- 当收货地址 不存在 没有显示-->
+    <view wx:if="{{!address.userName}}">
+    </view>
+    <!-- 当收货地址 存在 详细信息显示 -->
+    <view wx:else class="user_info_row">
+        <view class="user_info">
+           <view >{{address.userName}}</view>
+           <view >{{address.all}}</view>
+        </view>
+        <view class="user_phone">{{address.telNumber}}</view>
+        <!-- 复选框 -->
+        <view class="cart_chk_wrap">
+            <checkbox-group data-id="{{}}" bindchange="">
+                <checkbox checked="{{}}"></checkbox> 
+            </checkbox-group>
+            <view class="goods_moren">默认地址</view>
+        </view>
+        <view bindtap="handleItemNumEdit" data-id="" data-operation="" class="num_edit">编辑</view> 
+        <view class="goods_shuxian">丨</view>
+        <view bindtap="handleItemNumEdit" data-id="" data-operation="" class="num_edit">删除</view>        
+
+    </view>
+</view>
+
+
+
+
+
+
+
 <!-- 底部工具栏 -->
 <view class="footer_tool">
     <!-- 地址 -->
