--- a/pages/order/index.less
+++ b/pages/order/index.less
@@ -1,45 +1,48 @@
 .order_main {
+  background-color: #fff;
     .order_item {
-        padding: 20rpx;
-        border-bottom: 1rpx solid #ccc;
-        color: #666;
-      .order_no_row {
+      .order_main1_row{
+        padding: 15rpx;
+        border-top: 2rpx solid #ccc;
+        .order_time_row {
           display: flex;
-          padding: 10rpx 0; 
-          justify-content: space-between;
-        .order_no_text {
-  
+          .order_time_text{
+            flex: 1;
+          }
+          .order_time_value {
+            flex: 5;
+          }
         }
-  
-        .order_on_value {
-  
-        }
-      }
-  
-      .order_price_row {
-        display: flex;
-        padding: 10rpx 0; 
-        justify-content: space-between;
-        .order_price_text {
-  
-        }
-  
-        .order_price_value {
-            color: #eb4450;
-            font-size: 32rpx;
+        .order_address_row {
+          display: flex;
+          .order_address_text {
+            flex: 1;
+          }
+          .order_address_information {
+            flex: 5;
+          }
         }
       }
-  
-      .order_time_row {
+      .order_main2_row{
         display: flex;
-        padding: 10rpx 0; 
-        justify-content: space-between;
-        .order_time_text {
-  
+        border-bottom: 6rpx solid #ccc;
+        .order_img_wrap {
+          flex: 1;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          image {
+          width: 80%;
+          }
         }
-  
-        .order_time_value {
-  
+        .order_no_row {
+          flex: 3;
+          .order_on_value {
+            display: -webkit-box;
+            overflow: hidden;
+            -webkit-box-orient: vertical;
+            -webkit-line-clamp: 2;
+          }
         }
       }
     }
