--- a/pages/order/index.wxss
+++ b/pages/order/index.wxss
@@ -1,24 +1,47 @@
-.order_main .order_item {
-  padding: 20rpx;
-  border-bottom: 1rpx solid #ccc;
-  color: #666;
+.order_main {
+  background-color: #fff;
 }
-.order_main .order_item .order_no_row {
+.order_main .order_item .order_main1_row {
+  padding: 15rpx;
+  border-top: 2rpx solid #ccc;
+}
+.order_main .order_item .order_main1_row .order_time_row {
   display: flex;
-  padding: 10rpx 0;
-  justify-content: space-between;
 }
-.order_main .order_item .order_price_row {
+.order_main .order_item .order_main1_row .order_time_row .order_time_text {
+  flex: 1;
+}
+.order_main .order_item .order_main1_row .order_time_row .order_time_value {
+  flex: 5;
+}
+.order_main .order_item .order_main1_row .order_address_row {
   display: flex;
-  padding: 10rpx 0;
-  justify-content: space-between;
 }
-.order_main .order_item .order_price_row .order_price_value {
-  color: #eb4450;
-  font-size: 32rpx;
+.order_main .order_item .order_main1_row .order_address_row .order_address_text {
+  flex: 1;
 }
-.order_main .order_item .order_time_row {
+.order_main .order_item .order_main1_row .order_address_row .order_address_information {
+  flex: 5;
+}
+.order_main .order_item .order_main2_row {
   display: flex;
-  padding: 10rpx 0;
-  justify-content: space-between;
+  border-bottom: 6rpx solid #ccc;
+}
+.order_main .order_item .order_main2_row .order_img_wrap {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.order_main .order_item .order_main2_row .order_img_wrap image {
+  width: 80%;
+}
+.order_main .order_item .order_main2_row .order_no_row {
+  flex: 3;
+}
+.order_main .order_item .order_main2_row .order_no_row .order_on_value {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
 }
