--- a/pages/cart/index.less
+++ b/pages/cart/index.less
@@ -46,15 +46,20 @@ page{
           }
   
           .goods_price_wrap {
-              display: flex;
-              justify-content: space-between;
+            display: flex;
+            .goods_zhd{
+              height: 10%;
+              width: 10%;
+              margin-right: 10rpx;
+            }
             .goods_price {
-                color: #eb4450;
-                font-size: 34rpx;
+              color: #eb4450;
+              font-size: 32rpx;
             }
   
             .cart_num_tool {
-                display: flex;
+              display: flex;
+              margin-left: 120rpx;
               .num_edit {
                 width: 55rpx;
                 height: 55rpx;
