--- a/pages/pay/index.less
+++ b/pages/pay/index.less
@@ -52,8 +52,15 @@ page{
           }
   
           .goods_price_wrap {
+            display: flex;
+            .goods_zhd{
+              height: 20%;
+              width: 20%;
               display: flex;
-              justify-content: space-between;
+              justify-content: center;
+              align-items: center;
+              margin-right: 10rpx;
+            }
             .goods_price {
                 color: #eb4450;
                 font-size: 34rpx;
@@ -61,6 +68,7 @@ page{
   
             .cart_num_tool {
                 display: flex;
+                margin-left: 300rpx;
               .goods_num {
                 width: 55rpx;
                 height: 55rpx;
