--- a/pages/cart/index.wxml
+++ b/pages/cart/index.wxml
@@ -21,7 +21,10 @@
                 <view class="cart_info_wrap">
                     <view class="goods_name">{{item.goods_name}}</view>
                     <view class="goods_price_wrap">
-                        <view class="goods_price">￥{{item.goods_price}}</view>
+                        <image class="goods_zhd" src="../../icons/zhd.png" mode="widthFix"></image>
+                        <view class="goods_price">
+                            X{{item.goods_price}}
+                        </view>
                         <view class="cart_num_tool">
                             <view bindtap="handleItemNumEdit" data-id="{{item.goods_id}}" data-operation="{{-1}}" class="num_edit">-</view>
                             <view class="goods_num">{{item.num}}</view>
@@ -48,7 +51,7 @@
     <!-- 总价格 -->
     <view class="total_price_wrap">
         <view class="total_price">
-            合计：<text class="total_price_text">￥{{totalPrice}}</text>
+            合计：<text class="total_price_text">{{totalPrice}}</text>
         </view>
     </view>
     <!-- 结算 -->
