--- a/pages/categoryBook/index.wxml
+++ b/pages/categoryBook/index.wxml
@@ -2,7 +2,6 @@
             <view class="goods_group"
             >
                 <view class="goods_list">
-                    <!-- url="/pages/goods_list/index?cid={{item2.cat_id}}"  -->
                     <navigator
                     wx:for="{{rightContent}}"
                     wx:for-index="index1"
@@ -10,17 +9,19 @@
                     wx:key="id"
                     url="/pages/goods_detail/index?goods_id={{item1.id}}"
                     >
-                    <!--  上面 图片容器 -->
+                    <!-- 图片容器 -->
                     <view class="goods_img_wrap">
                         <image mode="scaleToFill" src="{{item1.mainImgUrl}}"></image>
                     </view>
-                    <!--  下面 名字价格容器 -->
+                    <!-- 名字价格容器 -->
                     <view class="goods_info_wrap">
                         <view class="goods_name">
                         {{item1.name}}
                         </view>
+                        <!-- 价格容器 -->
                         <view class="goods_price">
-                        ￥{{item1.value}}
+                        <image class="goods_zhd" src="../../icons/zhd.png" mode="widthFix"></image>
+                        X{{item1.value}}
                         </view>
                     </view>
                     </navigator>
