--- a/pages/goods_detail/index.wxss
+++ b/pages/goods_detail/index.wxss
@@ -8,20 +8,12 @@ page {
 .detail_swiper swiper image {
   width: 60%;
 }
-.goods_price {
-  padding: 15rpx;
-  font-size: 32rpx;
-  font-weight: 600;
-  color: #eb4450;
-}
 .goods_name_row {
   border-top: 5rpx solid #dedede;
   border-bottom: 5rpx solid #dedede;
   padding: 10rpx 0;
-  display: flex;
 }
 .goods_name_row .goods_name {
-  flex: 5;
   color: #000;
   font-size: 30rpx;
   padding: 0 10rpx;
@@ -30,13 +22,20 @@ page {
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
 }
-.goods_name_row .goods_collect {
-  flex: 1;
+.goods_name_row .goods_price {
+  padding: 10rpx;
+  font-size: 32rpx;
+  font-weight: 600;
+  color: #eb4450;
   display: flex;
-  flex-direction: column;
+}
+.goods_name_row .goods_price .goods_zhd {
+  height: 6%;
+  width: 6%;
+  display: flex;
   justify-content: center;
   align-items: center;
-  border-left: 1rpx solid #000;
+  margin-right: 10rpx;
 }
 .goods_info .goods_info_title {
   font-size: 32rpx;
