--- a/pages/pay/index.wxml
+++ b/pages/pay/index.wxml
@@ -31,7 +31,10 @@
                 <view class="cart_info_wrap">	
                     <view class="goods_name">{{item.goods_name}}</view>	
                     <view class="goods_price_wrap">	
-                        <view class="goods_price">￥{{item.goods_price}}</view>	
+                        <image class="goods_zhd" src="../../icons/zhd.png" mode="widthFix"></image>
+                        <view class="goods_price">
+                            X{{item.goods_price}}
+                        </view>	
                         <view class="cart_num_tool"> 	
                             <view class="goods_num">X {{item.num}}</view>	
                         </view>	
@@ -55,7 +58,7 @@
     <!-- 总价格 -->
     <view class="total_price_wrap">
         <view class="total_price">
-            合计：<text class="total_price_text">￥{{totalPrice}}</text>
+            合计：<text class="total_price_text">{{totalPrice}}</text>
         </view>
     </view>
     <!-- 支付 -->
